[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/world/World.gd" type="Script" id=1]
[ext_resource path="res://src/player/playerKin/playerKin.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/world/roofs/largeRoof.tscn" type="PackedScene" id=3]

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="worldFolder" type="Spatial" parent="."]

[node name="largeRoof" parent="worldFolder" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="worldFolder"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
visible = false

[node name="playerKin" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0 )

[node name="enemyFolder" type="Spatial" parent="."]
